netpol/netpol-backend-to-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traffic-from-backend-to-database
  namespace: database
spec:
  podSelector:
    matchLabels:
      kubernetes.io/metadata.name: database
      kubernetes.io/metadata.namespace: database
      kubernetes.io/component: db
      kubernetes.io/tier: app
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.namespace: backend
      podSelector:
        matchLabels:
          kubernetes.io/metadata.name: database
          kubernetes.io/metadata.namespace: database
          kubernetes.io/component: db
          kubernetes.io/tier: app
    ports:
    - protocol: TCP
      port: 5432
